[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/fonts/arial/ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/pause_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pause" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer/Pause"]
self_modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 412.0
margin_right = 612.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 0 )

[node name="MainButtons" type="VBoxContainer" parent="VBoxContainer/Pause/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer/Pause/Panel/MainButtons"]
margin_top = 217.0
margin_right = 200.0
margin_bottom = 247.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Resume"
flat = true

[node name="Settings" type="Button" parent="VBoxContainer/Pause/Panel/MainButtons"]
margin_top = 262.0
margin_right = 200.0
margin_bottom = 292.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Settings"
flat = true

[node name="MainMenu" type="Button" parent="VBoxContainer/Pause/Panel/MainButtons"]
margin_top = 307.0
margin_right = 200.0
margin_bottom = 337.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Main Menu"
flat = true

[node name="Exit" type="Button" parent="VBoxContainer/Pause/Panel/MainButtons"]
margin_top = 352.0
margin_right = 200.0
margin_bottom = 382.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Exit to desktop"
flat = true

[connection signal="pressed" from="VBoxContainer/Pause/Panel/MainButtons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Pause/Panel/MainButtons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Pause/Panel/MainButtons/Exit" to="." method="_on_Exit_pressed"]
